@@ -2,5 +2,6 @@
 
 <addon id='Page_Counter'>
 	<model>
+		<property name="Numericals" type="{Western Arabic,Eastern Arabic,Perso-Arabic}"/>
 	</model>
 </addon>
