@@ -1,3 +1,4 @@
+2013-11-18 Added support for Eastern Arabic and Perso-Arabic numericals in Page Counter
 2013-11-15 Fixed bug in selection with selecting last phrase
 2013-11-15 Add markAs... command to choice module
 2013-11-14 Scorm libraries updated to handle storing session time
